[package]
name = "i3monkit"
version = "0.1.2"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The toolkit to build cutomized i3status alternative"
readme = "README.md"
repository = "https://github.com/38/i3monkit"


[dependencies]
libc = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = "^0.3"
alsa = "^0.1"
curl = "^0.4"

[[example]]
name = "sample-i3-bar"
crate-type = ["bin"]

[[example]]
name = "customized-widget"
crate-type = ["bin"]

[[examples]]
name = "decorator"
crate-type = ["bin"]

[[examples]]
name = "sample-bar2"
crate-type = ["bin"]
